Closed Bug 712571 Opened 14 years ago Closed 14 years ago

nsIFilePicker.filterIndex always returns 0

Categories

(Core :: Widget: Win32, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla12
Tracking Status
firefox11 + verified

People

(Reporter: jwkbugzilla, Assigned: jimm)

References

Details

(Keywords: regression, Whiteboard: [qa!])

Attachments

(2 files)

nsIFilePicker.filterIndex always returns 0 in the current nightly builds regardless of the filter selected by the user. This breaks backup&restore UI in Adblock Plus. Steps to reproduce: 1. Install the attached extension. 2. The file picker dialog will open immediately - select the "Filter2" file filter. 3. Select any file and click "Open". Expected result: A message shows up saying: "File filter selected: Filter2". This is what I see in Firefox 8. Actual result: A message shows up saying: "File filter selected: Filter1". Reproduced in: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0a1) Gecko/20111220 Firefox/11.0a1) This is a recent regression, it was working correctly in the nightlies just recently. I suspect bug 661991 as the reason, will check.
As expected, regression range is http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fd6ab19f312c&tochange=beac16509534. So this is mostly certain a regression from bug 661991.
Blocks: 661991
Attached patch fixSplinter Review
Sorry about that. Here's the fix.
Assignee: nobody → jmathies
Attachment #583531 - Flags: review?(neil)
Comment on attachment 583531 [details] [diff] [review] fix Review of attachment 583531 [details] [diff] [review]: ----------------------------------------------------------------- ::: widget/src/windows/nsFilePicker.cpp @@ +973,5 @@ > > // results > > + // Remember what filter type the user selected > + UINT filterIdxResult = 1; I really didn't need this assignment, will remove it in the patch I land.
Attachment #583531 - Flags: review?(neil) → review+
Comment on attachment 583531 [details] [diff] [review] fix https://hg.mozilla.org/integration/mozilla-inbound/rev/dd08f68dce1b Requesting aurora approval for this regression fix. Very safe patch.
Attachment #583531 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
[Triage Comment] Holding in the queue to have this first bake a day on m-c.
Comment on attachment 583531 [details] [diff] [review] fix [Triage Comment] Regression in 11, now had time to bake on m-c. Approving for Aurora.
Attachment #583531 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [qa+]
Verified as fixed on: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0) Gecko/20100101 Firefox/11.0 The message shows up saying: "File filter selected: Filter2".
Status: RESOLVED → VERIFIED
Whiteboard: [qa+] → [qa!]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: