Bug 712571 - Fix for nsIFilePicker filterIndex always returning 0 on Vista and up. r=neil.